--- a/hello-esm-js/app/index.html
+++ b/hello-esm-js/app/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -7,6 +7,8 @@
 		<title>Hello, world</title>
 	</head>
 	<body>
+		<div id="app"></div>
+
 		<!-- Import the app as an ES Module -->
 		<script src="hello.js" type="module"></script>
 	</body>
