--- a/hello-parcel-ts/app/index.html
+++ b/hello-parcel-ts/app/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -7,6 +7,7 @@
 		<title>Hello, world</title>
 	</head>
 	<body>
+		<div id="app"></div>
 		<script src="hello.ts" type="module"></script>
 	</body>
 </html>
